--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,11 +1,13 @@
+@use "@/styles/base" as *;
 .header {
   width: 100%;
   height: 30rem;
+  min-width: 400px;
   min-height: 15rem;
   max-height: 30rem;
   margin: 0;
   padding: 0;
-  background-color: #95de15;
+  background-color: #0170b1;
   position: relative;
   border-bottom: #05155e 2px solid;
   background-image: url("/hero-background.jpg");
@@ -14,13 +16,14 @@
   background-repeat: no-repeat;
 
   .nav-logo-container {
+    @include flex(row, space-between);
     position: absolute;
-    top: 20px;
+    top: 10px;
     left: calc(2% - 2 * 0.5%);
     background-color: rgba(0, 0, 0, 0.45);
     width: 98%;
-    height: 20%;
-    margin: 10px auto;
+    height: 70px;
+    margin: 20px auto;
     border-radius: 20px;
     border: 1px solid rgba(0, 0, 0, 0.55);
   }
