--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,5 +1,3 @@
-@import "tailwindcss";
-
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -14,15 +12,18 @@ body {
   font-size: 16px;
   margin: 0;
   padding: 0;
+  width: 100%;
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-  place-items: center;
-  width: 100%;
+}
+
+.main {
   min-width: 320px;
+  margin: 0 auto;
+  max-width: 1600px;
   min-height: 100%;
+  place-items: center;
 }
