--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,3 +1,4 @@
+@use "@/styles/base" as *;
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -13,6 +14,7 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
+  scrollbar-width: none;
 }
 
 body {
@@ -24,6 +26,29 @@ body {
   min-width: 320px;
   margin: 0 auto;
   max-width: 1600px;
-  min-height: 100%;
+  min-height: 1080px;
   place-items: center;
+  background: linear-gradient(90deg, #0f172a, #132e5b);
+}
+
+.container {
+  position: relative;
+  width: 98%;
+  border-radius: 7px;
+  height: auto;
+  background-color: rgba(255, 255, 255, 0.3);
+  border: 0.25px solid rgba(255, 255, 255, 0.3);
+  margin: 1rem auto;
+  min-height: 1400px;
+  @include flex($justify: flex-start);
+  gap: 1.5rem;
+  color: white;
+}
+
+.footer {
+  min-height: 5rem;
+  width: 100%;
+  background-color: #0870a0;
+  @include flex(row);
+  color: rgb(255, 255, 255);
 }
