--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -26,9 +26,10 @@ body {
   min-width: 320px;
   margin: 0 auto;
   max-width: 1600px;
-  min-height: 1080px;
   place-items: center;
   background: linear-gradient(90deg, #0f172a, #132e5b);
+  height: 100%;
+  @include flex;
 }
 
 .container {
@@ -40,9 +41,12 @@ body {
   border: 0.25px solid rgba(255, 255, 255, 0.3);
   margin: 1rem auto;
   min-height: 1400px;
-  @include flex($justify: flex-start);
+  @include flex;
   gap: 1.5rem;
   color: white;
+}
+.seperator {
+  width: 70%;
 }
 
 .footer {
